ex6/testdata/typechecker/error/DeclTest-err3.java
class DeclTest {
	public static void main(String[] a){
    }
}

class A {}

class A {} // TE